--- a/Library.Desktop/Library.Desktop.csproj
+++ b/Library.Desktop/Library.Desktop.csproj
@@ -78,6 +78,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\CreateUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\CreateUserControl.Designer.cs">
+      <DependentUpon>CreateUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\DataUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -96,6 +102,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControls\CreateUserControl.resx">
+      <DependentUpon>CreateUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\DataUserControl.resx">
       <DependentUpon>DataUserControl.cs</DependentUpon>
     </EmbeddedResource>
